k8s/prod/service1_with_namespace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
        - name: service1
          image: service1
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  namespace: prod
spec:
  selector:
    app: service1
  ports:
    - port: 80
      targetPort: 5000
